--- a/AlarmPaw/en.lproj/Localizable.strings
+++ b/AlarmPaw/en.lproj/Localizable.strings
@@ -179,3 +179,5 @@ notificationTitle = "Notification permissions not enabled";
 openNotification = "Open Permissions";
 
 checkServerDeploy = "Check Server Deployment Tutorial";
+
+buildDesc = "AlarmPaw uses GitHub Actions to build and publish itself to the App Store. You can verify the ‘run_id’ in the URL to ensure Bark was built from its original open-source codebase.";
