--- a/AlarmPaw/ru.lproj/Localizable.strings
+++ b/AlarmPaw/ru.lproj/Localizable.strings
@@ -179,3 +179,8 @@ openNotification = "Открыть разрешения";
 checkServerDeploy = "Проверить инструкцию по развертыванию сервера";
 
 buildDesc = "AlarmPaw использует GitHub Actions для создания себя и публикации в магазинах приложений. Вы можете проверить « run id» в URL, чтобы убедиться, что Bark построен на основе его оригинальной библиотеки с открытым исходным кодом.";
+
+AppIconTitle = "Значок приложения";
+AppIconTips = "Нажмите, чтобы изменить стандартный значок приложения";
+
+switchError = "暂时不能切换";
