--- a/AlarmPaw/zh-Hans.lproj/Localizable.strings
+++ b/AlarmPaw/zh-Hans.lproj/Localizable.strings
@@ -201,4 +201,9 @@ checkServerDeploy = "查看服务器部署教程";
 buildDesc = "AlarmPaw 由 GitHub Actions 构建后上传到 App Store，此信息可帮助你确认当前版本是由开源代码所构建，未经任何人(包含作者)修改。";
 
 
+AppIconTitle = "程序图标";
+AppIconTips = "点击可以修改默认App图标";
+
+
+switchError = "暂时不能切换";
 
