增加修改app图标

--- a/AlarmPaw/en.lproj/Localizable.strings
+++ b/AlarmPaw/en.lproj/Localizable.strings
@@ -68,7 +68,6 @@ deleteTimeMessage = "Delete messages from the following time";
 messageModeChanged = "Message status changed";
 markNotRead = "Mark as unread";
 markRead = "Mark as read";
-deleteSuccess = "Delete successful";
 deleteTitle = "Delete";
 
 nothing = "Nothing";
@@ -148,7 +147,6 @@ needOneServer = "Must Keep at Least One Service";
 groupModeName = "Group";
 allModeName = "All";
 
-allMarkRead = "Mark All as Read";
 hourAgo = "One hour ago";
 dayAgo = "One day ago";
 weekAgo = "One week ago";
@@ -186,4 +184,23 @@ buildDesc = "AlarmPaw uses GitHub Actions to build and publish itself to the App
 AppIconTitle = "App Icon";
 AppIconTips = "Click to modify the default app icon";
 
-switchError = "暂时不能切换";
+switchError = "Switching is temporarily unavailable";
+
+syncHeader = "Link with other programs";
+syncFooter = "Carry server key and array of tokens";
+syncTitle = "Register Callback";
+syncOpened = "Enabled";
+syncNotOpen = "Not Enabled";
+syncTips = "This function will asynchronously call this API after the device is registered, transmitting all server information (the program will not verify if the sending is successful)\n
+        The final request URL example is as follows:\n
+        https://twown.com/sync?custom=custom content&servers=[{url:url,key:key},...]";
+syncSuccess = "Completed";
+syncFail = "Failed";
+syncManualCall = "Manual Call";
+syncServerHeader = "Server Address";
+syncServerField = "Enter Address";
+
+syncParamsHeader = "Enter the content of custom fields";
+syncParamsFooter = "Custom fields will be appended to the URL as ?custom=content";
+syncParamsTitle = "Enter the content of custom fields";
+
