--- a/AlarmPaw/tr.lproj/Localizable.strings
+++ b/AlarmPaw/tr.lproj/Localizable.strings
@@ -177,25 +177,29 @@ buildDesc = "Bark, kendisini oluşturmak ve App Store'da yayınlamak için GitHu
 
 AppIconTitle = "Uygulama İkonu";
 AppIconTips = "Varsayılan uygulama ikonunu değiştirmek için tıklayın";
-
 switchError = "Şu anda geçiş yapılamıyor";
 
-syncHeader = "Diğer programlarla bağlantı";
-syncFooter = "Sunucu anahtarı ve token dizisi ile";
-syncTitle = "Geribildirim Kaydı";
-syncOpened = "Açık";
-syncNotOpen = "Açık Değil";
-syncTips = "Bu işlev, cihaz kaydedildikten sonra bu API'yi asenkron olarak çağıracak, tüm sunucu bilgilerini iletecektir (program gönderimin başarılı olup olmadığını doğrulamaz)\n
-        Son istek URL örneği şu şekildedir:\n
-        https://twown.com/sync?custom=özel içerik&servers=[{url:url,key:key},...]";
-syncSuccess = "Tamamlandı";
-syncFail = "Başarısız";
-syncManualCall = "Manuel Çağrı";
-syncServerHeader = "Sunucu Adresi";
-syncServerField = "Adres Girin";
 
-syncParamsHeader = "Özel alanların içeriğini girin";
-syncParamsFooter = "Özel alanlar, URL'ye ?custom=içerik olarak eklenecek";
-syncParamsTitle = "Özel alanların içeriğini girin";
+mailTestTips = "Konu içerir: alarmpaw";
 
+mailHeader = "E-posta kısayolu çalıştırır";
 
+mailTitle = "Otomasyon konfigürasyonu";
+
+toMailTestTitle = "Otomasyon: AlarmPaaw";
+
+toMailTestText = "{title:\"Başlık\",...}";
+
+sendMailFail = "Çağrı başarısız";
+
+sendMailSuccess = "Çağrı başarılı";
+
+sendMailTestBtn = "Test";
+
+emailConfigHeader = "E-posta sunucu yapılandırması, yerelleştirilmiş hizmet";
+
+emailPasswordPl = "Lütfen şifre girin";
+
+tomailListHeader = "Alıcı e-posta listesi";
+
+emailNavigationTitle = "E-posta Otomasyonu";
