--- a/AlarmPaw/ru.lproj/Localizable.strings
+++ b/AlarmPaw/ru.lproj/Localizable.strings
@@ -229,3 +229,14 @@ saveSuccess = "Успешно сохранено";
 failOther = "Другая ошибка";
 
 doubleClickSave = "Двойной клик для сохранения";
+
+requestFail = "Ошибка запроса";
+signTitle = "Уведомление";
+signSubTitle = "Получите доступ к своему аккаунту, зарегистрируйтесь, чтобы получать уведомления";
+signHelp = "Не знаете, как начать? Получить помощь";
+signRetry = "Повторить";
+signPhoneInput = "Введите номер телефона";
+signCodeInput = "Введите код подтверждения";
+signGetCode = "Получить код подтверждения";
+
+serverConfig = "Настройка/Изменение сервера";
