--- a/AlarmPaw/zh-Hans.lproj/Localizable.strings
+++ b/AlarmPaw/zh-Hans.lproj/Localizable.strings
@@ -237,3 +237,15 @@ failOther = "其他错误";
 
 
 doubleClickSave = "双击保存";
+
+
+requestFail = "请求失败";
+signTitle = "通知";
+signSubTitle = "访问您的账户，注册获取您的通知";
+signHelp = "不知道如何开始? 获取帮助";
+signRetry = "重试";
+signPhoneInput = "请输入手机号码";
+signCodeInput = "请输入验证码";
+signGetCode = "获取验证码";
+
+serverConfig = "配置/修改服务器";
