--- a/AlarmPaw/tr.lproj/InfoPlist.strings
+++ b/AlarmPaw/tr.lproj/InfoPlist.strings
@@ -7,3 +7,6 @@
 */
 CFBundleDisplayName = "Alarm Paw";
 CFBundleName = "Alarm Paw";
+
+NSCameraUsageDescription = "QR kodunu tarayın";
+NSPhotoLibraryUsageDescription = "Mesaj resimlerini galeriye kaydet";
