--- a/AlarmPaw/en.lproj/InfoPlist.strings
+++ b/AlarmPaw/en.lproj/InfoPlist.strings
@@ -7,3 +7,6 @@
 */
 CFBundleDisplayName = "Alarm Paw";
 CFBundleName = "Alarm Paw";
+
+NSCameraUsageDescription = "Scan QR code";
+NSPhotoLibraryUsageDescription = "Save message images to the gallery";
