--- a/AlarmPaw/ru.lproj/InfoPlist.strings
+++ b/AlarmPaw/ru.lproj/InfoPlist.strings
@@ -7,3 +7,6 @@
 */
 CFBundleDisplayName = "Alarm Paw";
 CFBundleName = "Alarm Paw";
+
+NSCameraUsageDescription = "Сканировать QR-код";
+NSPhotoLibraryUsageDescription = "Сохранить изображения сообщения в галерею";
